--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Vai ser uma imagem</h1>
+    <header>
+        <h1>Vai ser uma imagem</h1>
+        <ul>
+            <li>escola</li>
+            <li>estudante</li>
+        </ul>
+    </header>
 </body>
 </html>
