--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Vai ser uma imagem</h1>
+        <img src="alurastart logo.png" alt="Logo da alurastart">
         <ul>
             <li>escola</li>
             <li>estudante</li>
