--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="alurastart logo.png" alt="Logo da alurastart">
+        <img class="cabecalho-imagem" src="alurastart logo.png" alt="Logo da alurastart"> 
         <ul>
             <li>escola</li>
             <li>estudante</li>
