--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="cabecalho"> 
         <img class="cabecalho-imagem" src="alurastart logo.png" alt="Logo da alurastart"> 
-        <ul>
+        <ul class="cabecalho-lista">
             <li>escola</li>
             <li>estudante</li>
         </ul>
