--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
     <header class="cabecalho"> 
         <img class="cabecalho-imagem" src="alurastart logo.png" alt="Logo da alurastart"> 
         <ul class="cabecalho-lista">
-            <li>escola</li>
-            <li>estudante</li>
+            <li class="cabecalho-lista-item">"escola</li>
+            <li class="cabecalho-lista-item">estudante</li>
         </ul>
     </header>
     <section class="escola">
-        <h2 class="escola-titulo">Sobre Escola</h2>
-        <p class="escola-texto-um">A escola Alura foi fundada em 2010 com o objetivo de ensinar Pensamento Computacional através da Programação.</p>
-        <p class="escola-texto-dois">A turma mais famosa é a Segunda Série A. Uma turma diversa e engajada, as vezes, um pouco bagunceira, mas que entrega excelentes resultados!</p>
+        <div>
+            <h2 class="escola-titulo">Sobre Escola</h2>
+            <p class="escola-texto-um">A escola Alura foi fundada em 2010 com o objetivo de ensinar Pensamento Computacional através da Programação.</p>
+            <p class="escola-texto-dois">A turma mais famosa é a Segunda Série A. Uma turma diversa e engajada, as vezes, um pouco bagunceira, mas que entrega excelentes resultados!</p>
+        </div>
          <img src="Teaching-amico.png" alt="professora em frente ao quadro">
     </section>
 </body>
