--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header class="cabecalho"> 
         <img class="cabecalho-imagem" src="alurastart logo.png" alt="Logo da alurastart"> 
         <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item">"escola</li>
-            <li class="cabecalho-lista-item">estudante</li>
+            <li class="cabecalho-lista-item">Escola</li>
+            <li class="cabecalho-lista-item">Estudante</li>
         </ul>
     </header>
     <section class="escola">
