--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     </section>
     <section class="estudante">
 <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+<img class="estudante-imgem" src="unnamed.jpg" alt="foto marjory">
     </section>
 </body>
 </html>
