--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
          <img class="escola-imagem" src="Teaching-amico.png" alt="professora em frente ao quadro">
     </section>
     <section class="estudante">
-<h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
-<img class="estudante-imgem" src="unnamed.jpg" alt="foto marjory">
+        <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+        <img class="estudante-imagem" src="unnamed.jpg" alt="foto marjory">
+        <h3 class="estudante-nome">Marjory</h3>
+        
     </section>
 </body>
 </html>
