--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
         <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
         <img class="estudante-imagem" src="unnamed.jpg" alt="foto marjory">
         <h3 class="estudante-nome">Marjory</h3>
-        
+       <img src="instagram.png" alt="Imagem do Instagram"> 
+       <img src="github.png" alt="Imagem do Github">
+       <img src="linkedin.png" alt="Imagem do linkedin">
     </section>
 </body>
 </html>
