--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="cabecalho"> 
-        <img class="cabecalho-imagem" src="alurastart logo.png" alt="Logo da alurastart"> 
+    <header class="cabecalho">
+        <img class="cabecalho-imagem" src="alurastart logo.png" alt="Logo da alura start">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Escola</li>
             <li class="cabecalho-lista-item">Estudante</li>
@@ -20,15 +20,26 @@
             <p class="escola-texto-um">A escola Alura foi fundada em 2010 com o objetivo de ensinar Pensamento Computacional através da Programação.</p>
             <p class="escola-texto-dois">A turma mais famosa é a Segunda Série A. Uma turma diversa e engajada, as vezes, um pouco bagunceira, mas que entrega excelentes resultados!</p>
         </div>
-         <img class="escola-imagem" src="Teaching-amico.png" alt="professora em frente ao quadro">
+        <img class="escola-imagem" src="Teaching-amico.png" alt="Professora explicando conteúdo">
     </section>
     <section class="estudante">
         <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
-        <img class="estudante-imagem" src="unnamed.jpg" alt="foto marjory">
-        <h3 class="estudante-nome">Marjory</h3>
-       <img src="instagram.png" alt="Imagem do Instagram"> 
-       <img src="github.png" alt="Imagem do Github">
-       <img src="linkedin.png" alt="Imagem do linkedin">
+        <div class="estudante-todos">
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="unnamed.jpg" alt="Foto da Marjory">
+            <h3 class="estudante-nome">Rayane</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Imagem do Instagram">
+            <img class="estudante-icone" src="github.png" alt="Imagem do Github">
+            <img class="estudante-icone" src="linkedin.png" alt="Imagem do Linkedin">
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="unnamed.jpg" alt="Foto da Marjory">
+            <h3 class="estudante-nome">Rayane</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Imagem do Instagram">
+            <img class="estudante-icone" src="github.png" alt="Imagem do Github">
+            <img class="estudante-icone" src="linkedin.png" alt="Imagem do Linkedin">
+        </div>
+        </div>
     </section>
 </body>
 </html>
