--- a/index.html
+++ b/index.html
@@ -25,16 +25,45 @@
     <section class="estudante">
         <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
         <div class="estudante-todos">
+            <span></span>
         <div class="estudante-div">
             <img class="estudante-imagem" src="unnamed.jpg" alt="Foto da Marjory">
-            <h3 class="estudante-nome">Rayane</h3>
+            <h3 class="estudante-nome">Marjory</h3>
             <img class="estudante-icone" src="instagram.png" alt="Imagem do Instagram">
             <img class="estudante-icone" src="github.png" alt="Imagem do Github">
             <img class="estudante-icone" src="linkedin.png" alt="Imagem do Linkedin">
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="unnamed.jpg" alt="Foto da Marjory">
-            <h3 class="estudante-nome">Rayane</h3>
+            <h3 class="estudante-nome">Marjory</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Imagem do Instagram">
+            <img class="estudante-icone" src="github.png" alt="Imagem do Github">
+            <img class="estudante-icone" src="linkedin.png" alt="Imagem do Linkedin">
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="unnamed.jpg" alt="Foto da Marjory">
+            <h3 class="estudante-nome">Marjory</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Imagem do Instagram">
+            <img class="estudante-icone" src="github.png" alt="Imagem do Github">
+            <img class="estudante-icone" src="linkedin.png" alt="Imagem do Linkedin">
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="unnamed.jpg" alt="Foto da Marjory">
+            <h3 class="estudante-nome">Marjory</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Imagem do Instagram">
+            <img class="estudante-icone" src="github.png" alt="Imagem do Github">
+            <img class="estudante-icone" src="linkedin.png" alt="Imagem do Linkedin">
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="unnamed.jpg" alt="Foto da Marjory">
+            <h3 class="estudante-nome">Marjory</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Imagem do Instagram">
+            <img class="estudante-icone" src="github.png" alt="Imagem do Github">
+            <img class="estudante-icone" src="linkedin.png" alt="Imagem do Linkedin">
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="unnamed.jpg" alt="Foto da Marjory">
+            <h3 class="estudante-nome">Marjory</h3>
             <img class="estudante-icone" src="instagram.png" alt="Imagem do Instagram">
             <img class="estudante-icone" src="github.png" alt="Imagem do Github">
             <img class="estudante-icone" src="linkedin.png" alt="Imagem do Linkedin">
