--- a/index.html
+++ b/index.html
@@ -29,42 +29,44 @@
         <div class="estudante-div">
             <img class="estudante-imagem" src="unnamed.jpg" alt="Foto da Marjory">
             <h3 class="estudante-nome">Marjory</h3>
-            <img class="estudante-icone" src="instagram.png" alt="Imagem do Instagram">
+            <a href="https://www.instagram.com/marjorystipp?igsh=cWppZGx6d3FjdnEy&utm_source=qr"><img class="estudante-icone" src="instagram.png" alt="Imagem do Instagram"></a>
             <img class="estudante-icone" src="github.png" alt="Imagem do Github">
             <img class="estudante-icone" src="linkedin.png" alt="Imagem do Linkedin">
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="unnamed.jpg" alt="Foto da Marjory">
             <h3 class="estudante-nome">Marjory</h3>
-            <img class="estudante-icone" src="instagram.png" alt="Imagem do Instagram">
+            <a href="https://www.instagram.com/marjorystipp?igsh=cWppZGx6d3FjdnEy&utm_source=qr"><img class="estudante-icone" src="instagram.png" alt="Imagem do Instagram"></a>
             <img class="estudante-icone" src="github.png" alt="Imagem do Github">
             <img class="estudante-icone" src="linkedin.png" alt="Imagem do Linkedin">
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="unnamed.jpg" alt="Foto da Marjory">
             <h3 class="estudante-nome">Marjory</h3>
-            <img class="estudante-icone" src="instagram.png" alt="Imagem do Instagram">
+            <a href="https://www.instagram.com/marjorystipp?igsh=cWppZGx6d3FjdnEy&utm_source=qr"><img class="estudante-icone" src="instagram.png" alt="Imagem do Instagram"></a>
+            <img class="estudante-icone" src="github.png" alt="Imagem do Github">
+            <img class="estudante-icone" src="linkedin.png" alt="Imagem do Linkedin">
+        </div>
+        <span></span>
+        <span></span>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="unnamed.jpg" alt="Foto da Marjory">
+            <h3 class="estudante-nome">Marjory</h3>
+            <a href="https://www.instagram.com/marjorystipp?igsh=cWppZGx6d3FjdnEy&utm_source=qr"><img class="estudante-icone" src="instagram.png" alt="Imagem do Instagram"></a>
             <img class="estudante-icone" src="github.png" alt="Imagem do Github">
             <img class="estudante-icone" src="linkedin.png" alt="Imagem do Linkedin">
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="unnamed.jpg" alt="Foto da Marjory">
             <h3 class="estudante-nome">Marjory</h3>
-            <img class="estudante-icone" src="instagram.png" alt="Imagem do Instagram">
+            <a href="https://www.instagram.com/marjorystipp?igsh=cWppZGx6d3FjdnEy&utm_source=qr"><img class="estudante-icone" src="instagram.png" alt="Imagem do Instagram"></a>
             <img class="estudante-icone" src="github.png" alt="Imagem do Github">
             <img class="estudante-icone" src="linkedin.png" alt="Imagem do Linkedin">
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="unnamed.jpg" alt="Foto da Marjory">
             <h3 class="estudante-nome">Marjory</h3>
-            <img class="estudante-icone" src="instagram.png" alt="Imagem do Instagram">
-            <img class="estudante-icone" src="github.png" alt="Imagem do Github">
-            <img class="estudante-icone" src="linkedin.png" alt="Imagem do Linkedin">
-        </div>
-        <div class="estudante-div">
-            <img class="estudante-imagem" src="unnamed.jpg" alt="Foto da Marjory">
-            <h3 class="estudante-nome">Marjory</h3>
-            <img class="estudante-icone" src="instagram.png" alt="Imagem do Instagram">
+            <a href="https://www.instagram.com/marjorystipp?igsh=cWppZGx6d3FjdnEy&utm_source=qr"><img class="estudante-icone" src="instagram.png" alt="Imagem do Instagram"></a>
             <img class="estudante-icone" src="github.png" alt="Imagem do Github">
             <img class="estudante-icone" src="linkedin.png" alt="Imagem do Linkedin">
         </div>
